tests/baselines/reference/overloadEquivalenceWithStatics.errors.txt
overloadEquivalenceWithStatics.ts(5,1): error TS2322: Type 'null' is not assignable to type 'A1<S>'.


==== overloadEquivalenceWithStatics.ts (1 errors) ====
    class A1<T> {
    static B<S>(v: A1<S>): A1<S>; // 1 
    static B<S>(v: S): A1<S>; // 2 : Error Duplicate signature
    static B<S>(v: any): A1<S> {
    return null;
    ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'A1<S>'.
    }
    }
    